# RuSQL

./: .gitignore  DIFF.md  README.md  피드백.txt
.claude/: settings.json  settings.local.json
code/: Cargo.toml  README.md  test_full.sql  test_output.txt  test_phase6.sql
code/.claude/: settings.json  settings.local.json
code/mds/: AI.md  DIFF.md  FUNCTIONS.md  PERFORMANCE.md  PLAN.md
code/rusql-cli/: Cargo.toml
code/rusql-client/: Cargo.toml
code/rusql-core/: Cargo.toml
code/rusql-mcp/: mcp_server.py  (+2 more)
code/rustdb-core/: Cargo.toml
code/rustdb-core/src/: lib.rs
code/rustdb-core/src/catalog/: schema.rs
code/rustdb-core/src/engine/: executor.rs  join.rs  lock_manager.rs  planner.rs
code/rustdb-core/src/parser/: ast.rs  lexer.rs  parser.rs
code/rustdb-core/src/storage/: btree.rs  buffer_pool.rs  composite_index.rs  disk.rs  mod.rs  page.rs
code/rustdb-core/src/transaction/: group_commit.rs  mod.rs  txn_manager.rs  wal.rs
docs/: RuSQL_통합문서_v27.docx  RuSQL_통합문서_v28.docx  RustDB_통합문서_v10.docx  RustDB_통합문서_v11.5.docx  RustDB_통합문서_v11.docx  RustDB_통합문서_v12.docx  RustDB_통합문서_v13.docx  RustDB_통합문서_v14.docx  RustDB_통합문서_v15.docx  RustDB_통합문서_v16.docx  RustDB_통합문서_v17.docx  RustDB_통합문서_v18.docx  RustDB_통합문서_v19.docx  RustDB_통합문서_v20.docx  RustDB_통합문서_v21.docx  RustDB_통합문서_v22.docx  RustDB_통합문서_v24.docx  RustDB_통합문서_v25.docx  RustDB_통합문서_v26.docx  RustDB_통합문서_v27.docx  RustDB_통합문서_v3.docx  RustDB_통합문서_v4(2).docx  RustDB_통합문서_v4.docx  RustDB_통합문서_v5.docx  RustDB_통합문서_v6.docx  RustDB_통합문서_v7.docx  RustDB_통합문서_v8.docx  RustDB_통합문서_v9 (1).docx  RustDB_통합문서_심플.docx
(+110 files in other folders)
