[package]
name = "rustdb-core"
version = "2.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
lz4_flex = { version = "0.11", default-features = false }
sha2 = "0.10"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
rayon = "1"